force-app/main/default/objects/Approval_Step__c/Approval_Step__c.object-meta.xml
<CustomObject>
    <label>Approval Step</label>
    <pluralLabel>Approval Steps</pluralLabel>
    <nameField>
        <label>Approval Step Name</label>
        <type>AutoNumber</type>
        <displayFormat>AS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Ordered step in an Engagement's approval timeline.</description>
</CustomObject>