force-app/main/default/objects/Approval_Step__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>