force-app/main/default/objects/Approval_Step__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <type>MasterDetail</type>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>Approval_Steps</relationshipName>
    <relationshipLabel>Approval Steps</relationshipLabel>
</CustomField>