force-app/main/default/objects/Approval_Step__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <label>Step Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>